adjusted html pages and created seperate css files

--- a/HTML/Regions.html
+++ b/HTML/Regions.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--  CSS Link -->
-    <link type="text/css" rel="stylesheet" href="../CSS/Style.css">
+    <link type="text/css" rel="stylesheet" href="../CSS/regions.css">
     <!-- Bootstrap  -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -44,13 +44,7 @@
                             <a class="nav-link text-white" href="Economy.html">Economy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white " href="Culture.html">Culture</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="Councils.html">Councils</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white " href="Geography.html">Geography</a>
+                            <a class="nav-link text-white " href="Tourism.html">Visit NSW</a>
                         </li>
 
                     </ul>
@@ -126,24 +120,25 @@
                         manufacturing, resources and clean energy, health and aged care, medical technology, tourism and
                         transport.</p>
                 </div>
-                <div class="col-lg-4 border h-50 bg-light">
+ 
+                <div class="col-lg-4 border h-50  bg-light">
                     <h5 class="mt-2 ml-2 text-center">On this Page</h5>
                     <ul>
                         <a href="#sectionDiv">
-                            <li class="lia">Regional New South Wales: dynamic, productive and connected</li>
+                            <li class="">Regional New South Wales: dynamic, productive and connected</li>
                         </a>
                         <a href="#regionsDiv">
-                            <li class="lia">An Overview of NSW Region</li>
+                            <li class="my-2">An Overview of NSW Region</li>
                         </a>
                         <a href="">
-                            <li class="lia">Living and Working in Regional NSW</li>
+                            <li class="">Living and Working in Regional NSW</li>
                         </a>
                         <a href="">
-                            <li class="lia">Investment Opportunties in Regional NSW</li>
+                            <li class="mt-2">Investment Opportunties in Regional NSW</li>
                         </a>
                     </ul>
                 </div>
-
+            
             </div>
             <div class="container">
                 <div class="row">
@@ -231,19 +226,21 @@
         </div>
     </main>
     <footer>
-        <div class="footerDiv">
+        <div class="h-25 bg-info">
             <div class="row">
-        <div class="col-lg-9 " style="float: left; padding-top: 30px; padding-left: 30px; color: white;">
-            <p>We pay respect to the Traditional Custodians and First Peoples of NSW, and acknowledge their continued
-                connection to their country and culture.</p>
-            <p>Copyright © 2020</p>
-        </div>
-        <div class="col-lg-3 pt-2 float-right"  >
-            <a href="https://www.facebook.com/ServiceNSW/" class="fa fa-facebook"></a>
-            <a href="https://twitter.com/ServiceNSW" class="fa fa-twitter"></a>
-            <a href="https://www.linkedin.com/company/servicensw/?originalSubdomain=au" class="fa fa-linkedin"></a>
-        </div>
-    </div>
+                <div class="col-lg-9 " style="float: left; padding-top: 30px; padding-left: 30px; color: white;">
+                    <p>We pay respect to the Traditional Custodians and First Peoples of NSW, and acknowledge their
+                        continued
+                        connection to their country and culture.</p>
+                    <p>Copyright © 2020</p>
+                </div>
+                <div class="col-lg-3 pt-2 float-right">
+                    <a href="https://www.facebook.com/ServiceNSW/" class="fa fa-facebook"></a>
+                    <a href="https://twitter.com/ServiceNSW" class="fa fa-twitter"></a>
+                    <a href="https://www.linkedin.com/company/servicensw/?originalSubdomain=au"
+                        class="fa fa-linkedin"></a>
+                </div>
+            </div>
         </div>
     </footer>
 
