--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--  CSS Link -->
-    <link type="text/css" rel="stylesheet" href="../CSS/Style.css">
+    <link type="text/css" rel="stylesheet" href="../CSS/index.css">
     <!-- Bootstrap  -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -45,14 +45,9 @@
                             <a class="nav-link text-white" href="Economy.html">Economy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white " href="Culture.html">Culture</a>
+                            <a class="nav-link text-white " href="Tourism.html">Visit NSW</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="Councils.html">Councils</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white " href="Geography.html">Geography</a>
-                        </li>
+                         
 
                     </ul>
                 </div>
@@ -67,11 +62,11 @@
 
             <div class="parallax mt-2"></div>
 
-            <div class=" " style="margin-top: 20px;">
-                <div id="leftaside" class="d-none d-sm-block " style=" width:15%; height: 750px; float: left;  ">
+            <div class="mt-4 ">
+                <div id="awards" class="d-none d-sm-block">
                     <img src="../Images/awards.jpg" class="h-100 w-100" />
                 </div>
-                <div id="info" class="">
+                <div id="key-facts" >
                     <h2>Key facts about NSW</h2>
                     <p> Nearly a third of all Australians live in New South Wales (NSW), with
                         most
@@ -95,7 +90,7 @@
                         people per
                         square kilometre.</p>
                     <p>Top five languages spoken at home in NSW</p><br />
-                    <table>
+                    <table class="table-languages w-75 ">
                         <thead>
                             <tr>
                                 <th>Language</th>
@@ -142,7 +137,7 @@
             <div class="row mt-4 ">
                 <div class="col-lg-4 col-md-12 ">
                     <div class="card" style=" border-radius: 10px; ">
-                        <a href="https://www.sydney.com/"> <img class="img-fluid card-img-top"
+                        <a href="https://www.sydney.com/"> <img class="img-fluid w-100 h-100 "
                                 src="../Images/operaHouse.jpg" alt="Card image cap" style="border-radius: 10px;"></a>
                         <div class="card-body">
                             <h4 class="card-title"><b>Capitol</b></h4>
@@ -156,27 +151,27 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-12 ">
+                <div class="col-lg-4 col-md-12 my-1">
                     <div class="card" style=" border-radius: 10px;">
-                        <a href="https://www.abs.gov.au/population"> <img class="img-fluid card-img-top"
+                        <a href="https://www.abs.gov.au/population"> <img class="img-fluid w-100 h-100 "
                                 src="../Images/population.jpg" alt="Card image cap"
-                                style="border-radius: 10px; height: 230px;"></a>
-                        <div class="card-body">
-                            <h4 class="card-title "><b>Population</b></h4>
-                            <p class="card-text ">In March 2019, the population of New South Wales was over 8 million,
+                                style="border-radius: 10px; height: 240px;"></a>
+                        <div class="card-body mt-4">
+                            <h4 class="card-title mt-3  "><b>Population</b></h4>
+                            <p class="card-text mb-3 ">In March 2019, the population of New South Wales was over 8 million,
                                 making it Australia's most populous state. Just under two-thirds of the state's
                                 population,
                                 5.1 million, live in the Greater Sydney area. Inhabitants of New South Wales are
                                 referred to
                                 as New South Welshmen.</p>
-                            <a href="https://www.abs.gov.au/population" class="btn btn-primary  "
-                                style="margin-top: 30px; border-radius: 20px; width:50%;">Go Population</a>
+                            <a href="https://www.abs.gov.au/population" class="btn btn-primary mt-4  "
+                                 style="  border-radius: 20px; width:50%;">Go Population</a> 
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-12 ">
                     <div class="card" style=" border-radius: 10px;">
-                        <a href="https://www.nsw.gov.au/about-nsw"><img class=" img-fluid card-img-top"
+                        <a href="https://www.nsw.gov.au/about-nsw"><img class=" img-fluid w-100 h-100 "
                                 src="../Images/threeSisters.jpg" alt="Card image cap" style="border-radius: 10px;"></a>
                         <div class="card-body">
                             <h4 class="card-title"><b>NSW</b></h4>
@@ -191,57 +186,59 @@
             </div>
             <hr />
             <div class="container">
-            <div class="row ">
-                <div class="col-md-4">
-                    <h3>NSW Government</h3>
-                    <ul>
-                        <li>The Premier</li>
-                        <li>Media Releases</li>
-                        <li>NSW Ministers</li>
-                        <li>Have Your Say</li>
-                    </ul>
-                </div>
+                <div class="row ">
+                    <div class="col-md-4">
+                        <h3>NSW Government</h3>
+                        <ul>
+                            <li>The Premier</li>
+                            <li>Media Releases</li>
+                            <li>NSW Ministers</li>
+                            <li>Have Your Say</li>
+                        </ul>
+                    </div>
 
-                <div class="col-md-4">
-                    <h3>NSW Departments</h3>
-                    <ul>
-                        <li>Education</li>
-                        <li>Health</li>
-                        <li>Planning and Development</li>
-                        <li>Regional NSW</li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
-                    <h3>Popular</h3>
-                    <ul>
-                        <li>News</li>
-                        <li>Life Events</li>
-                        <li>NSW School and Public Holidays</li>
-                        <li>Find a Job in NSW Government</li>
-                    </ul>
-                </div>
+                    <div class="col-md-4">
+                        <h3>NSW Departments</h3>
+                        <ul>
+                            <li>Education</li>
+                            <li>Health</li>
+                            <li>Planning and Development</li>
+                            <li>Regional NSW</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4">
+                        <h3>Popular</h3>
+                        <ul>
+                            <li>News</li>
+                            <li>Life Events</li>
+                            <li>NSW School and Public Holidays</li>
+                            <li>Find a Job in NSW Government</li>
+                        </ul>
+                    </div>
 
+                </div>
             </div>
         </div>
     </div>
-</div>
     <footer>
-        <div class="footerDiv">
+        <div class="h-25 bg-info">
             <div class="row">
-        <div class="col-lg-9 " style="float: left; padding-top: 30px; padding-left: 30px; color: white;">
-            <p>We pay respect to the Traditional Custodians and First Peoples of NSW, and acknowledge their continued
-                connection to their country and culture.</p>
-            <p>Copyright © 2020</p>
-        </div>
-        <div class="col-lg-3 pt-2 float-right"  >
-            <a href="https://www.facebook.com/ServiceNSW/" class="fa fa-facebook"></a>
-            <a href="https://twitter.com/ServiceNSW" class="fa fa-twitter"></a>
-            <a href="https://www.linkedin.com/company/servicensw/?originalSubdomain=au" class="fa fa-linkedin"></a>
-        </div>
-    </div>
+                <div class="col-lg-9 " style="float: left; padding-top: 30px; padding-left: 30px; color: white;">
+                    <p>We pay respect to the Traditional Custodians and First Peoples of NSW, and acknowledge their
+                        continued
+                        connection to their country and culture.</p>
+                    <p>Copyright © 2020</p>
+                </div>
+                <div class="col-lg-3 pt-2 float-right">
+                    <a href="https://www.facebook.com/ServiceNSW/" class="fa fa-facebook"></a>
+                    <a href="https://twitter.com/ServiceNSW" class="fa fa-twitter"></a>
+                    <a href="https://www.linkedin.com/company/servicensw/?originalSubdomain=au"
+                        class="fa fa-linkedin"></a>
+                </div>
+            </div>
         </div>
     </footer>
-   
+
     <script src="../JS/Scripts"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
