--- a/HTML/Economy.html
+++ b/HTML/Economy.html
@@ -21,7 +21,7 @@
     <!--Header Start-->
     <header>
         <div class="container">
-
+            <!----Navbar---->
             <nav class="navbar navbar-expand-lg navbar-light  rounded mt-2 ">
                 <a class="navbar-brand text-white " href="#">
                     <img src="../Images/harbourBridge.jpg" width="50" height="30" class="d-inline-block align-top "
@@ -52,7 +52,7 @@
                 </div>
             </nav>
         </div>
-
+        <!----/Navbar---->
     </header>
     <!--/Header-------------------------------->
 
@@ -62,6 +62,7 @@
                 <img src="../Images/money2.webp" alt="" class=" img-fluid w-100 h-75 ">
                 <div class="bg-success h-25"></div>
             </div>
+            <!----Main---->
             <div class="col-lg-9">
                 <h1>NSW Economy</h1>
                 <p style="font-size: 16px;">At more than half-a-trillion dollars, NSW is Australia’s largest state
@@ -108,17 +109,18 @@
 
         </div>
     </div>
-  
+
     </div>
-     
-        <div class=" row ">
-            <div class="bg-warning col-lg-12 ">
+    <!----/Main---->
+    <div class=" row ">
+        <!----SignUp-NewLetter---->
+        <div class="bg-warning col-lg-12 ">
             <div class="col-lg-12">
                 <h2>Sign up to our newsletter</h2>
                 <p>Receive NSW Government news, events, and public consultations in your inbox.</p>
             </div>
             <div class="col--lg-12  ">
-                <form class="form-inline ml-4 "  action="/action_page.php ">
+                <form class="form-inline ml-4 " action="/action_page.php ">
                     <label for="email2" class="mb-2 mr-sm-2">Email:</label>
                     <input type="text" class="form-control mr-4 mb-2 " id="email2" placeholder="Enter email"
                         name="email" style="width: 300px;">
@@ -132,7 +134,7 @@
                 </form>
             </div>
         </div>
-     
+        <!----/SignUp-NewLetter---->
     </div>
     <div class="container">
         <div class="row ">
@@ -167,39 +169,40 @@
 
         </div>
     </div>
-</div>
-</div>
-<footer>
-<div class="h-25 bg-info">
-    <div class="row">
-        <div class="col-lg-9 " style="float: left; padding-top: 30px; padding-left: 30px; color: white;">
-            <p>We pay respect to the Traditional Custodians and First Peoples of NSW, and acknowledge their
-                continued
-                connection to their country and culture.</p>
-            <p>Copyright © 2020</p>
-        </div>
-        <div class="col-lg-3 pt-2 float-right">
-            <a href="https://www.facebook.com/ServiceNSW/" class="fa fa-facebook"></a>
-            <a href="https://twitter.com/ServiceNSW" class="fa fa-twitter"></a>
-            <a href="https://www.linkedin.com/company/servicensw/?originalSubdomain=au"
-                class="fa fa-linkedin"></a>
-        </div>
     </div>
-</div>
-</footer>
-
-<script src="../JS/Scripts"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-crossorigin="anonymous"></script>
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    </div>
+    <!----Footer---->
+    <footer>
+        <div class="h-25 bg-info">
+            <div class="row">
+                <div class="col-lg-9 " style="float: left; padding-top: 30px; padding-left: 30px; color: white;">
+                    <p>We pay respect to the Traditional Custodians and First Peoples of NSW, and acknowledge their
+                        continued
+                        connection to their country and culture.</p>
+                    <p>Copyright © 2020</p>
+                </div>
+                <div class="col-lg-3 pt-2 float-right">
+                    <a href="https://www.facebook.com/ServiceNSW/" class="fa fa-facebook"></a>
+                    <a href="https://twitter.com/ServiceNSW" class="fa fa-twitter"></a>
+                    <a href="https://www.linkedin.com/company/servicensw/?originalSubdomain=au"
+                        class="fa fa-linkedin"></a>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!----/Footer---->
+    <script src="../JS/Scripts"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 
 </body>
