--- a/HTML/Regions.html
+++ b/HTML/Regions.html
@@ -20,7 +20,7 @@
     <!--Header Start-->
     <header>
         <div class="container ">
-
+<!----Navbar---->
             <nav class="navbar  navbar-expand-lg navbar-light  rounded my-2  ">
                 <a class="navbar-brand text-white " href="#">
                     <img src="../Images/harbourBridge.jpg" width="50" height="30" class="d-inline-block align-top "
@@ -51,12 +51,13 @@
                 </div>
             </nav>
         </div>
-
+<!----/Navbar---->
     </header>
 
     <!--Header End-->
 
     <main class="mt-2">
+        <!----Carousel---->
         <div class="container">
             <div id="carouselExampleCaptions" class="carousel slide   " data-ride="carousel">
                 <ol class="carousel-indicators">
@@ -97,7 +98,7 @@
                     <span class="sr-only">Next</span>
                 </a>
             </div>
-
+<!----/Carousel---->
             <hr style="height: 3px; color: brown; background-color: cadetblue;">
             <div class="row">
 
@@ -140,6 +141,7 @@
                 </div>
             
             </div>
+            <!----NSW Regions---->
             <div class="container">
                 <div class="row">
                     <h5 class="my-4 ">An overview of the six out of nine regions of NSW</h5>
@@ -190,6 +192,7 @@
                     </div>
                 </div>
             </div>
+<!----/NSW Regions---->
             <hr />
             <div class="row ">
                 <div class="col-md-4">
@@ -225,6 +228,7 @@
         </div>
         </div>
     </main>
+<!----Footer---->
     <footer>
         <div class="h-25 bg-info">
             <div class="row">
@@ -243,6 +247,7 @@
             </div>
         </div>
     </footer>
+<!----/Footer---->
 
     <script src="../JS/Scripts"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
