--- a/HTML/index.html
+++ b/HTML/index.html
@@ -18,10 +18,10 @@
 
 <body>
 
-    <!--Header Start-->
+<!--Header Start-->
     <header>
         <div class="container">
-
+<!-- Navbar-->
             <nav class="navbar navbar-expand-lg navbar-light  rounded mt-2  ">
                 <a class="navbar-brand text-white " href="#">
                     <img src="../Images/harbourBridge.jpg" width="50" height="30" class="d-inline-block align-top "
@@ -53,10 +53,11 @@
                 </div>
             </nav>
         </div>
-
+<!-- /Navbar-->
     </header>
 
-    <!--Header End-->
+    <!--/Header End-->
+
     <div class="main">
         <div class="container">
 
@@ -133,6 +134,7 @@
         <div id="">
 
         </div>
+<!----Cards---->
         <div class="container">
             <div class="row mt-4 ">
                 <div class="col-lg-4 col-md-12 ">
@@ -184,6 +186,7 @@
                     </div>
                 </div>
             </div>
+<!----/Cards---->
             <hr />
             <div class="container">
                 <div class="row ">
@@ -220,6 +223,7 @@
             </div>
         </div>
     </div>
+    <!----Footer---->
     <footer>
         <div class="h-25 bg-info">
             <div class="row">
@@ -238,6 +242,7 @@
             </div>
         </div>
     </footer>
+    <!----/Footer---->
 
     <script src="../JS/Scripts"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
