--- a/HTML/Regions.html
+++ b/HTML/Regions.html
@@ -14,6 +14,7 @@
     <!-- Font Awesome Icon -->
     <script src="https://kit.fontawesome.com/695e1ffa5d.js" crossorigin="anonymous"></script>
     <title>Welcom to NSW</title>
+   
 </head>
 
 <body>
@@ -145,24 +146,24 @@
             <div class="container">
                 <div class="row">
                     <h5 class="my-4 ">An overview of the six out of nine regions of NSW</h5>
-                    <div class=" ">
-                        <div class=" col-lg-4 bg-info text-dark float-left my-4 border">
+                    <div>
+                        <div >
 
-                            <h4 class="text-center">North Coast1</h4>
-                            <hr />
-                            <p class="text-center">It extends from Tweed Shire Council in the north <a
+                            <h4 class="text-center" id="flip">North Coast</h4>
+                            
+                            <p class="" id="panel">It extends from Tweed Shire Council in the north <a
                                     href="https://www.lls.nsw.gov.au/our-regions/north-coast">more</a></p>
                         </div>
                         <div class=" col-lg-4 bg-primary text-dark float-left my-4 border ">
 
-                            <h4 class="text-center">North Coast2</h4>
+                            <h4 class="text-center" id="flip">South Coast</h4>
                             <hr />
-                            <p class="text-center">It extends from Tweed Shire Council in the north <a
+                            <p class="text-center" id="panel">It covers 55,600 square kilometres of south-east NSW <a
                                     href="https://www.lls.nsw.gov.au/our-regions/north-coast">more</a></p>
                         </div>
                         <div class=" col-lg-4 btn-light text-dark float-left my-4 border ">
 
-                            <h4 class="text-center">North Coast3</h4>
+                            <h4 class="text-center" >North Coast3</h4>
                             <hr />
                             <p class="text-center">It extends from Tweed Shire Council in the north <a
                                     href="https://www.lls.nsw.gov.au/our-regions/north-coast">more</a></p>
@@ -262,7 +263,13 @@
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-
+    <script> 
+        $(document).ready(function(){
+          $("#flip").click(function(){
+            $("#panel").slideToggle("slow");
+          });
+        });
+        </script>
 </body>
 
 </html>
