--- a/HTML/Regions.html
+++ b/HTML/Regions.html
@@ -14,14 +14,14 @@
     <!-- Font Awesome Icon -->
     <script src="https://kit.fontawesome.com/695e1ffa5d.js" crossorigin="anonymous"></script>
     <title>Welcom to NSW</title>
-   
+
 </head>
 
 <body>
     <!--Header Start-->
     <header>
         <div class="container ">
-<!----Navbar---->
+            <!----Navbar---->
             <nav class="navbar  navbar-expand-lg navbar-light  rounded my-2  ">
                 <a class="navbar-brand text-white " href="#">
                     <img src="../Images/harbourBridge.jpg" width="50" height="30" class="d-inline-block align-top "
@@ -52,7 +52,7 @@
                 </div>
             </nav>
         </div>
-<!----/Navbar---->
+        <!----/Navbar---->
     </header>
 
     <!--Header End-->
@@ -99,7 +99,7 @@
                     <span class="sr-only">Next</span>
                 </a>
             </div>
-<!----/Carousel---->
+            <!----/Carousel---->
             <hr style="height: 3px; color: brown; background-color: cadetblue;">
             <div class="row">
 
@@ -122,7 +122,7 @@
                         manufacturing, resources and clean energy, health and aged care, medical technology, tourism and
                         transport.</p>
                 </div>
- 
+
                 <div class="col-lg-4 border h-50  bg-light">
                     <h5 class="mt-2 ml-2 text-center">On this Page</h5>
                     <ul>
@@ -140,60 +140,58 @@
                         </a>
                     </ul>
                 </div>
-            
+
             </div>
             <!----NSW Regions---->
             <div class="container">
                 <div class="row">
                     <h5 class="my-4 ">An overview of the six out of nine regions of NSW</h5>
-                    <div>
-                        <div >
-
-                            <h4 class="text-center" id="flip">North Coast</h4>
-                            
-                            <p class="" id="panel">It extends from Tweed Shire Council in the north <a
+                    <div class=" col-lg-12">
+                        <div class=" ">
+                            <h4 class="flip">South Coast</h4>
+                            <p class="panel">It covers 55,600 square kilometres of south-east NSW <a
                                     href="https://www.lls.nsw.gov.au/our-regions/north-coast">more</a></p>
                         </div>
-                        <div class=" col-lg-4 bg-primary text-dark float-left my-4 border ">
-
-                            <h4 class="text-center" id="flip">South Coast</h4>
-                            <hr />
-                            <p class="text-center" id="panel">It covers 55,600 square kilometres of south-east NSW <a
+                        <div>
+                            <h4 class="flip">North Coast</h4>
+                            <p class="panel">It extends from Tweed Shire Council in the north <a
                                     href="https://www.lls.nsw.gov.au/our-regions/north-coast">more</a></p>
                         </div>
-                        <div class=" col-lg-4 btn-light text-dark float-left my-4 border ">
-
-                            <h4 class="text-center" >North Coast3</h4>
-                            <hr />
-                            <p class="text-center">It extends from Tweed Shire Council in the north <a
+                        <div>
+                            <h4 class="flip">North Coast</h4>
+                            <p class="panel">It extends from Tweed Shire Council in the north <a
                                     href="https://www.lls.nsw.gov.au/our-regions/north-coast">more</a></p>
                         </div>
-                        <div class=" col-lg-4 bg-warning text-dark float-left my-4 border ">
-
-                            <h4 class="text-center">North Coast4</h4>
-                            <hr />
-                            <p class="text-center">It extends from Tweed Shire Council in the north <a
+                        <div class=" ">
+                            <h4  class="flip">South Coast</h4>
+                            <p  class="panel">It covers 55,600 square kilometres of south-east NSW <a
                                     href="https://www.lls.nsw.gov.au/our-regions/north-coast">more</a></p>
                         </div>
-                        <div class=" col-lg-4 bg-info text-dark float-left my-4 border ">
-
-                            <h4 class="text-center">North Coast5</h4>
-                            <hr />
-                            <p class="text-center">It extends from Tweed Shire Council in the north <a
+                        <div class=" ">
+                            <h4 class="flip">North Coast3</h4>
+                            <p class="panel">It extends from Tweed Shire Council in the north <a
                                     href="https://www.lls.nsw.gov.au/our-regions/north-coast">more</a></p>
                         </div>
-                        <div class=" col-lg-4 bg-danger text-dark float-left my-4 border ">
-
-                            <h4 class="text-center">North Coast6</h4>
-                            <hr />
-                            <p class="text-center">It extends from Tweed Shire Council in the north <a
+                        <div class="">
+                            <h4 class="flip">North Coast4</h4>
+                            <p  class="panel">It extends from Tweed Shire Council in the north <a
+                                    href="https://www.lls.nsw.gov.au/our-regions/north-coast">more</a></p>
+                        </div>
+                        <div class="">
+                            <h4 class="flip">North Coast5</h4>
+                            <p  class="panel">It extends from Tweed Shire Council in the north <a
+                                    href="https://www.lls.nsw.gov.au/our-regions/north-coast">more</a></p>
+                        </div>
+                        <div class="">
+                            <h4  class="flip">North Coast6</h4>
+                            <p  class="panel">It extends from Tweed Shire Council in the north <a
                                     href="https://www.lls.nsw.gov.au/our-regions/north-coast">more</a></p>
                         </div>
 
                     </div>
                 </div>
             </div>
-<!----/NSW Regions---->
+            <!----/NSW Regions---->
             <hr />
             <div class="row ">
                 <div class="col-md-4">
@@ -229,7 +227,7 @@
         </div>
         </div>
     </main>
-<!----Footer---->
+    <!----Footer---->
     <footer>
         <div class="h-25 bg-info">
             <div class="row">
@@ -248,7 +246,7 @@
             </div>
         </div>
     </footer>
-<!----/Footer---->
+    <!----/Footer---->
 
     <script src="../JS/Scripts"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -263,13 +261,14 @@
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <script> 
-        $(document).ready(function(){
-          $("#flip").click(function(){
-            $("#panel").slideToggle("slow");
-          });
+    <script>
+        $(document).ready(function () {
+            $(".flip").click(function () {
+                $(".panel").slideToggle("slow");
+            });
         });
-        </script>
+    </script>
+
 </body>
 
 </html>
