--- a/HTML/Regions.html
+++ b/HTML/Regions.html
@@ -23,7 +23,7 @@
         <div class="container ">
             <!----Navbar---->
             <nav class="navbar  navbar-expand-lg navbar-light  rounded my-2  ">
-                <a class="navbar-brand text-white " href="#">
+                <a class="navbar-brand text-white " href="index.html">
                     <img src="../Images/harbourBridge.jpg" width="50" height="30" class="d-inline-block align-top "
                         alt="">
                     My NSW
