added image in tourism html and css

--- a/HTML/Tourism.html
+++ b/HTML/Tourism.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--  CSS Link -->
-    <link type="text/css" rel="stylesheet" href="../CSS/economy.css">
+    <link type="text/css" rel="stylesheet" href="../CSS/Tourism.css">
     <!-- Bootstrap  -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -54,93 +54,24 @@
         </div>
 
     </header>
-    <!--/Header-------------------------------->
-     <div class="container">
-        <img src="../Images/ballon.jpg" class= " h-50 w-100  my-4" alt="Ballon">
-
-<h1 class="my-4 text-center text-danger">Coming Soon!</h1>
-<hr class="w-100"/>
-<hr class="w-75"/>
-<hr class="w-50"/>
-<hr class="w-25"/>
-</div>
+    <!-------------------/Header-------------------------------->
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 my-2 ">
-                <img src="../Images/money2.webp" alt="" class=" img-fluid w-100 h-75 ">
-                <div class="bg-success h-25"></div>
-            </div>
-            <div class="col-lg-9">
-                <h1>NSW Economy</h1>
-                <p style="font-size: 16px;">At more than half-a-trillion dollars, NSW is Australia’s largest state
-                    economy. The state has a diversified, service driven economy.</p>
-                <p style="font-size: 16px;">The industries that are the largest contributors to the economy are:</p>
-                <ul>
-                    <li>business services (which includes financial services, real estate services and information
-                        media
-                        and telecommunications)</li>
-                    <li class="lisize">construction</li>
-                    <li class="lisize">manufacturing</li>
-                    <li class="lisize">manufacturing</li>
-                    <li class="lisize">health</li>
-                    <li class="lisize">education</li>
-                </ul>
-                <p>The largest areas of employment are:</p>
-                <ul>
-                    <li class="lisize">health</li>
-                    <li class="lisize">retail trade and professional services</li>
-                    <li class="lisize">scientific and technical services.</li>
-
-                </ul>
-
-                <p class="lisize"><a href="https://www.treasury.nsw.gov.au/nsw-economy/about-nsw-economy">Find out
-                        more
-                        about NSW
-                        Economy</a></p>
-                <h2>Credit rating</h2>
-                <p>NSW has been assessed to have the highest possible credit rating, AAA, by both Moody’s and
-                    Standard &
-                    Poor’s. NSW is one of only two states with a triple-A credit rating. This rating was given
-                    because
-                    of the state’s strong, stable economy and financial management.</p>
-                <p>NSW has a strong institutional framework and a diverse economy, and is focused on investing in
-                    areas
-                    where it is most needed in order to strengthen our economy further.</p>
-                <p>Visit <a
-                        href="https://www.treasury.nsw.gov.au/nsw-economy/about-nsw-economy/triple-credit-rating">NSW
-                        Treasury</a> to find out more about the Triple-A credit rating and what it means for the
-                    state's
-                    economy.</p>
-            </div>
-
-
+            <section class="bgimage">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 img-text">
+                            <h3>Love NSW</h3>
+                            <p>It’s always a good time to be planning your next adventure. The golden beaches, lush
+                                national parks, rolling vineyards and legendary locals of NSW will be there for you when
+                                you’re ready to travel again.</p>
+                                <hr/>
+                            <p><a href="#" class="btn btn-primary btn-large">Learn more »</a></p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
-    </div>
-  
-    </div>
-     
-        <div class=" row ">
-            <div class="bg-warning col-lg-12 ">
-            <div class="col-lg-12">
-                <h2>Sign up to our newsletter</h2>
-                <p>Receive NSW Government news, events, and public consultations in your inbox.</p>
-            </div>
-            <div class="col--lg-12  ">
-                <form class="form-inline ml-4 "  action="/action_page.php ">
-                    <label for="email2" class="mb-2 mr-sm-2">Email:</label>
-                    <input type="text" class="form-control mr-4 mb-2 " id="email2" placeholder="Enter email"
-                        name="email" style="width: 300px;">
-
-
-                    <label class="form-check-label ml-4">
-                        <input type="checkbox" class="form-check-input" name="remember"> Remember me
-                    </label>
-
-                    <button type="submit" class="btn btn-primary mb-2 ml-4">Subscribe</button>
-                </form>
-            </div>
-        </div>
-     
     </div>
     <div class="container">
         <div class="row ">
@@ -175,39 +106,39 @@
 
         </div>
     </div>
-</div>
-</div>
-<footer>
-<div class="h-25 bg-info">
-    <div class="row">
-        <div class="col-lg-9 " style="float: left; padding-top: 30px; padding-left: 30px; color: white;">
-            <p>We pay respect to the Traditional Custodians and First Peoples of NSW, and acknowledge their
-                continued
-                connection to their country and culture.</p>
-            <p>Copyright © 2020</p>
-        </div>
-        <div class="col-lg-3 pt-2 float-right">
-            <a href="https://www.facebook.com/ServiceNSW/" class="fa fa-facebook"></a>
-            <a href="https://twitter.com/ServiceNSW" class="fa fa-twitter"></a>
-            <a href="https://www.linkedin.com/company/servicensw/?originalSubdomain=au"
-                class="fa fa-linkedin"></a>
-        </div>
     </div>
-</div>
-</footer>
+    </div>
+    <footer>
+        <div class="h-25 bg-info">
+            <div class="row">
+                <div class="col-lg-9 " style="float: left; padding-top: 30px; padding-left: 30px; color: white;">
+                    <p>We pay respect to the Traditional Custodians and First Peoples of NSW, and acknowledge their
+                        continued
+                        connection to their country and culture.</p>
+                    <p>Copyright © 2020</p>
+                </div>
+                <div class="col-lg-3 pt-2 float-right">
+                    <a href="https://www.facebook.com/ServiceNSW/" class="fa fa-facebook"></a>
+                    <a href="https://twitter.com/ServiceNSW" class="fa fa-twitter"></a>
+                    <a href="https://www.linkedin.com/company/servicensw/?originalSubdomain=au"
+                        class="fa fa-linkedin"></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
-<script src="../JS/Scripts"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-crossorigin="anonymous"></script>
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="../JS/Scripts"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 
 </body>
